<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nimons360.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_family_detail"
            app:destination="@id/nav_family_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.nimons360.ui.map.MapFragment"
        android:label="@string/nav_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_families"
        android:name="com.nimons360.ui.families.FamiliesFragment"
        android:label="@string/nav_families"
        tools:layout="@layout/fragment_families">
        <action
            android:id="@+id/action_families_to_create"
            app:destination="@id/nav_create_family" />
        <action
            android:id="@+id/action_families_to_detail"
            app:destination="@id/nav_family_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_family_detail"
        android:name="com.nimons360.ui.families.FamilyDetailFragment"
        android:label="Family Detail"
        tools:layout="@layout/fragment_family_detail">
        <argument
            android:name="familyId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_family"
        android:name="com.nimons360.ui.families.CreateFamilyFragment"
        android:label="@string/create_family"
        tools:layout="@layout/fragment_create_family" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.nimons360.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
